# OmniCV-Lib

./: README.md  imgMap.cpp  omnidir-cameras.md  requirements.txt  setup.py  utils.hpp
.github/workflows/: buildPython.yml  python-publish.yml  testsCpp.yml  testsPython.yml
Examples/: README.md  cubemap2equirect.cpp  cubemap2equirect.py  cubemap2persp.cpp  cubemap2persp.py  equirect2cubemap.cpp  equirect2cubemap.py  equirect2fisheye.cpp  equirect2fisheye.py  equirect2persp.cpp  equirect2persp.py  fisheye2equirect.cpp  fisheye2equirect.py
applications/: README.md  UCM_GUI.py  ViewerGUI.py  set_fisheye_params_gui.py
data/: credits.txt
docs/: Applications.html  Equirectangular-to-cubemap.html  Equirectangular-to-fisheye.html  Equirectangular-to-perspective.html  Examples.html  Fisheye-to-equirectangular.html  FisheyeGUI.html  Omnidirectional-Cameras.html  ParamsGUI.html  ROS_Nodes.html  ViewerGUI.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: Applications.rst.txt  Equirectangular-to-cubemap.rst.txt  Equirectangular-to-fisheye.rst.txt  Equirectangular-to-perspective.rst.txt  Examples.rst.txt  Fisheye-to-equirectangular.rst.txt  FisheyeGUI.rst.txt  Introduction.rst.txt  Omnidirectional-Cameras.rst.txt  ParamsGUI.rst.txt  ROS_Nodes.rst.txt  ViewerGUI.rst.txt  index.rst.txt
omnicv/: Makefile  Pipfile  README.rst  __init__.py  imgMap.cpp  omnicv.py  requirements.txt
paper/: paper.bib  paper.md
ros_files/: CMakeLists.txt  README.md  bkp_cmake.txt  package.xml
ros_files/config_files/: fisheyeParams.txt
ros_files/src/: cubemap2equirect.cpp  cubemap2persp.cpp  equirect2cubemap.cpp  equirect2fisheye.cpp  equirect2persp.cpp  fisheye2equirect.cpp  imgMap.cpp  main_code.cpp  utils.hpp  vision_node.cpp
tests/: srcpath.py  test  test.cpp  test.sh  test_.py  test_visual  test_visual.cpp  test_visual.py  tests.py  tests_visual.py
tests/input/: credits.txt
